maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:47: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (indication < min) {
  ^ShortestPathMaze:51: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return (minNeighborX, maxNeighborY, min);
  ^ShortestPathMaze:58: error: ';' expected but '=' found.
      (minNX, minNY, min) = processNeighbor(x, y, 1, 0, min);
                          ^ShortestPathMaze:59: error: ';' expected but '=' found.
      (minNX, minNY, min) = processNeighbor(x, y, 0, -1, min);
                          ^ShortestPathMaze:60: error: ';' expected but '=' found.
      (minNX, minNY, min) = processNeighbor(x, y, 0, 1, min);
                          ^